<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string
         name="app_name">  Password Creator</string>
    <string
         name="no_name"></string>
    <string
        name="help">  Help Screen</string>
    <string
        name="hello">  Hello? I am not using this screen.</string>
    <string
        name="settingradio1">  Strong</string>
    <string
        name="settingsradio2">  Medium</string>
    <string
        name="settingsradio3">  Weak</string>
    <string
        name="settingsgeneratebutton">Generate Password</string>
    <string
        name="menu">Main Menu</string>
    <string
        name="menu_item_settings">Settings</string>
    <string
        name="menu_item_help">Help</string>
    <string
        name="splash">Splash Screen</string>
    <string
        name="settings">Settings</string>
    <string
        name="input_text">Enter a phrase below:</string>
    <string
        name="output_text"> Your new generated password:</string>
     <string
        name="menu_item_stats">Statistics</string>
     <string
        name="generate">Generator</string>
    <string
        name="generate_button">Generate</string>
     <string
        name="cancel_button">Cancel</string>
     <string
        name="menu_item_generate">Generate Password</string>
    <string
        name="statistics">Statistics</string>
    <string
        name="app_logo_top">Password Creator</string>
    <string
        name="app_logo_bottom">By Crypto Applications</string>
    <string
        name="app_version_info">Version 10.0.0
    </string>
    
 </resources>