<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/bkgrnd"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="261dp"
        android:orientation="vertical" >

        <RelativeLayout
            android:id="@+id/RelativeLayout01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <ImageView
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/ImageView_MenuHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:src="@drawable/icon" >
            </ImageView>

            <TextView
                android:id="@+id/TextView01"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_gravity="fill_horizontal|center"
                android:shadowColor="@android:color/white"
                android:text="@string/generate"
                android:textColor="@color/title_color"
                android:textSize="@dimen/screen_title_size" >
            </TextView>

            <ImageView
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/ImageView_MenuHeader2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:layout_gravity="right|center_vertical"
                android:src="@drawable/icon" >
            </ImageView>
        </RelativeLayout>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/output_text"
            android:textColor="@color/menu_color"
            android:textSize="@dimen/field_header_size" />

        <EditText
            android:id="@+id/editText2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <RadioGroup
            android:id="@+id/radioGroup1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <RadioButton
                android:id="@+id/radio0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/settingradio1"
                android:textColor="@color/green_color"
                android:textSize="@dimen/field_header_size" />

            <RadioButton
                android:id="@+id/radio1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settingsradio2"
                android:textColor="@color/yellow_color"
                android:textSize="@dimen/field_header_size" />

            <RadioButton
                android:id="@+id/radio2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settingsradio3"
                android:textColor="@color/red_color"
                android:textSize="@dimen/field_header_size" />
        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="76dp"
        android:layout_weight="0.05"
        android:orientation="horizontal" >

        <RadioGroup
            android:id="@+id/radioGroup3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
        </RadioGroup>

        <Button
            android:id="@+id/Button_Yes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:minWidth="40px"
            android:text="@string/generate_button"
            android:textSize="@dimen/menu_item_size" >
        </Button>

        <Button
            android:id="@+id/Button_No"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_gravity="bottom"
            android:minWidth="40px"
            android:text="@string/cancel_button"
            android:textSize="@dimen/menu_item_size" >
        </Button>

        <RadioGroup
            android:id="@+id/radioGroup2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="107dp"
        android:orientation="vertical" >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:text="@string/input_text"
            android:textColor="@color/menu_color"
            android:textSize="@dimen/field_header_size" />

        <EditText
            android:id="@+id/editText1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom" >

            <requestFocus />
        </EditText>

        <ProgressBar
            android:id="@+id/progressBar1"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

</LinearLayout>
